tdf#151560 don't crash on loading dubious fods

Change-Id: Ib41b3a95dd3829e8d3eca61621257fdd416bd8dc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150483
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>